# ae-interview

./: .pre-commit-config.yaml  LICENSE  README.md  requirements.txt
notebooks/: owm.ipynb  requirements.txt  sdk.ipynb
owmapi/: pyproject.toml
owmapi/owmapi/: __init__.py  api.py  dto.py
wsdk/: pyproject.toml
wsdk/wsdk/: __init__.py
wxplorer/: manage.py
wxplorer/wxplorer/: asgi.py  settings.py  urls.py  wsgi.py
wxplorer/xplorer/: apps.py  models.py
wxplorer/xplorer/api/: serializers.py  urls.py  views.py
wxplorer/xplorer/migrations/: 0001_initial.py  0002_simplestationweather_and_more.py  0003_alter_simplestationweather_temperature.py  0004_alter_simplestationweather_unique_together.py
